tests/ui/ast_body_literal.stderr
error[E0382]: use of moved value: `lit`
  --> tests/ui/ast_body_literal_from_term.rs:13:10
   |
9  |     let lit = ast::basic_literal_from_symbolic_atom(&loc, ast::Sign::NoSign, atom1).unwrap();
   |         --- move occurs because `lit` has type `clingo::ast::BasicLiteral<'_>`, which does not implement the `Copy` trait
10 |
11 |     let blit: ast::BodyLiteral = lit.into();
   |                                      ------ `lit` moved due to this method call
12 |
13 |     drop(lit);
   |          ^^^ value used here after move
   |
note: `into` takes ownership of the receiver `self`, which moves `lit`
  --> $RUST/core/src/convert/mod.rs
   |
   |     fn into(self) -> T;
   |             ^^^^
help: you can `clone` the value and consume it, but this might not be your desired behavior
   |
11 |     let blit: ast::BodyLiteral = lit.clone().into();
   |                                      ++++++++
